[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Dialogs/ManageLayouts.gd" type="Script" id=1]

[node name="ManageLayouts" type="AcceptDialog"]
margin_right = 191.0
margin_bottom = 217.0
window_title = "Manage Layouts"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Layouts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavedLayouts" type="ItemList" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 153.0
margin_right = 200.0
margin_bottom = 173.0

[node name="AddLayout" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_right = 37.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
text = "Add"

[node name="EditLayout" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 41.0
margin_right = 77.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
disabled = true
text = "Edit"

[node name="DeleteLayout" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 81.0
margin_right = 136.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
disabled = true
text = "Delete"

[node name="LayoutSettings" type="ConfirmationDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 181.0
resizable = true

[node name="LayoutName" type="LineEdit" parent="LayoutSettings"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -78.5
margin_right = -8.0
margin_bottom = 50.5
size_flags_horizontal = 3
placeholder_text = "Insert name"

[node name="DeleteConfirmation" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
dialog_text = "Are you sure you want to delete this layout?"

[connection signal="about_to_show" from="." to="." method="_on_ManageLayouts_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_ManageLayouts_popup_hide"]
[connection signal="item_activated" from="VBoxContainer/SavedLayouts" to="." method="_on_SavedLayouts_item_activated"]
[connection signal="item_selected" from="VBoxContainer/SavedLayouts" to="." method="_on_SavedLayouts_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/SavedLayouts" to="." method="_on_SavedLayouts_nothing_selected"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/AddLayout" to="." method="_on_AddLayout_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/EditLayout" to="." method="_on_EditLayout_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/DeleteLayout" to="." method="_on_DeleteLayout_pressed"]
[connection signal="confirmed" from="LayoutSettings" to="." method="_on_LayoutSettings_confirmed"]
[connection signal="confirmed" from="DeleteConfirmation" to="." method="_on_DeleteConfirmation_confirmed"]
